# open-go-kr-parser

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  plan.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  daily-notify.yml
.governance/: coding-style.md  env.yaml  memory.md  patterns.md
.serena/: project.yml
.serena/memories/: completion_checklist.md  project_overview.md  style_conventions.md  suggested_commands.md
.spec/api-client/: spec.yaml
.spec/code-quality/: spec.yaml
.spec/scheduler/: spec.yaml
.spec/telegram-notifier/: spec.yaml
.tasks/: backlog.yaml  current.yaml  done.yaml
config/: agencies.yaml
src/: __init__.py  client.py  main.py  notifier.py
src/open_go_kr_parser/: client.py  config.py  main.py  notifier.py
tests/: __init__.py  test_client.py  test_config.py  test_main.py  test_notifier.py  test_package_metadata.py
